<resources>
    <string name="app_name">OWFant</string>
    <string name="playername_default">Player Name</string>
    <string name="playerpoints_default">0.0</string>
    <string name="player_hero_imgview_content_description">Hero picture</string>
    <string name="player_role_imgview_content_description">Role picture</string>
    <string name="playerteam_default">Team</string>
    <string name="player_natl_imgview_content_description">Nationality picture</string>
    <string name="myteamname_default">My Team</string>
    <string name="myteamrecord_default">Team Record</string>
    <string name="playerheroid_default">0</string>
    <string name="playerroleid_default">0</string>
    <string name="playernatlid_default">0</string>
    <string name="username_default">Username</string>
    <string name="tab_myteam_name">My Team</string>
    <string name="tab_vs_name">VS</string>
    <string name="tab_players_name">Players</string>
    <string name="tab_league_name">League</string>
</resources>
