<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/player_details_linlay"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <ImageView
        android:id="@+id/player_hero_imgview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:contentDescription="@string/player_hero_imgview_content_description" />

    <TextView
        android:id="@+id/player_name_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:text="@string/playername_default" />

    <ImageView
        android:id="@+id/player_role_imgview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:contentDescription="@string/player_role_imgview_content_description" />

    <TextView
        android:id="@+id/player_points_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:text="@string/playerpoints_default" />

    <TextView
        android:id="@+id/player_team_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:text="@string/playerteam_default" />

    <ImageView
        android:id="@+id/player_natl_imgview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:contentDescription="@string/player_natl_imgview_content_description" />

</LinearLayout>